--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -28,4 +34,12 @@ body{
 .filter {
   -webkit-backdrop-filter: opacity(50);
   backdrop-filter: opacity(50);
+}
+
+.stroke-title-cursive{
+  -webkit-text-stroke: 0.4px black;
+}
+
+.stroke-title{
+  -webkit-text-stroke: 0.6px black;
 }
